--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "laravel/framework": "^7.24",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.4",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^9.4",
+        "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
